--- a/EP_Quest/Components/Shared/Preloader.razor
+++ b/EP_Quest/Components/Shared/Preloader.razor
@@ -10,10 +10,13 @@
             <div class='inner'></div>
         </div>
         <div class='circle'>
-            <div class='inner'></div>
+            <div class='inner2'></div>
         </div>
         <div class='circle'>
-            <div class='inner'></div>
+            <div class='inner2'></div>
+        </div>
+        <div class='circle'>
+            <div class='inner2'></div>
         </div>
     </div>
 </div>
