--- a/EP_Quest/wwwroot/css/main.scss
+++ b/EP_Quest/wwwroot/css/main.scss
@@ -20,6 +20,52 @@ main {
     background: linear-gradient(#1d709c, #000b39);
 }
 
+a {
+    width: 12rem;
+    height: 3rem;
+    margin: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    text-decoration: none;
+    color: #00add4;
+    border: 2px solid #00add4;
+    border-radius: 5px;
+    position: relative;
+    transition: all .35s;
+
+    span {
+        position: relative;
+        z-index: 2;
+    }
+
+    &:after {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 100%;
+        background-color: #00add4;
+        transition: all .35s;
+    }
+
+    &:hover {
+        color: white;
+        cursor: pointer;
+    }
+
+    &:hover:after {
+        width: 100%;
+    }
+
+    @media (max-width: 767px) {
+        font-size: 28px;
+        height: 4rem;
+    }
+}
+
 .transparent{
     opacity: 0;
 }
