--- a/EP_Quest/Components/GreetingCard/Index.razor
+++ b/EP_Quest/Components/GreetingCard/Index.razor
@@ -1,5 +1,5 @@
 ﻿@using EP_Quest.Components.Shared
-@using EP_Quest.Services.Classes
+@using EP_Quest.Services.Common
 @inject LinkGenerator LGenerator
 @inject DropboxService DService
 @inject IJSRuntime JSRuntime
