--- a/EP_Quest/Components/Routing.razor
+++ b/EP_Quest/Components/Routing.razor
@@ -1,4 +1,6 @@
-﻿<Router AppAssembly="@typeof(Routing).Assembly">
+﻿@using EP_Quest.Components.Shared
+
+<Router AppAssembly="@typeof(Routing).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(_Layout)" />
     </Found>
