--- a/EP_Quest/Views/Shared/_Layout.cshtml
+++ b/EP_Quest/Views/Shared/_Layout.cshtml
@@ -5,12 +5,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@((string)ViewBag.Title)</title>
-    <base href="~/"/>
-    <link href="css/main.css" rel="stylesheet">
-    <link href="EP_Quest.styles.css" rel="stylesheet"/>
+    <link rel="icon" type="image/png" href="~/favicon.png">
+    <base href="~/" />
+    <link href="css/reset.min.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
+    <link href="EP_Quest.styles.css" rel="stylesheet" />
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="https://cdn.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
     <script src="js/Render.js"></script>
 </head>
 <body>
