postcard scene changed

--- a/EP_Quest/Components/GreetingCard/Index.razor
+++ b/EP_Quest/Components/GreetingCard/Index.razor
@@ -22,7 +22,7 @@
 @code {
     public static event Action OnUpdate = delegate { };
     private static bool IsLoading { get; set; }
-    private const string SceneName = "Gangster";
+    private const string SceneName = "Postcard";
     private const string PrintedText = "Ваш текст здесь Ваш текст здесь Ваш текст здесь ";
     public static string CurrentText { get; set; } = string.Empty;
 
