--- a/EP_Quest/Components/Quest/Internal/Character.razor
+++ b/EP_Quest/Components/Quest/Internal/Character.razor
@@ -1,3 +1,8 @@
-﻿
+﻿<div class="info-container">
+    <span>Progress</span>
+    <span>Time until the end of step</span>
+    <span>Help</span>
+</div>
+
 @code {
 }
