--- a/EP_Quest/Components/Quest/Index.razor
+++ b/EP_Quest/Components/Quest/Index.razor
@@ -4,7 +4,7 @@
 <Preloader IsLoading="IsLoading"></Preloader>
 
 <div class="character-container">
-    <Character></Character>
+    <Progress></Progress>
 </div>
 <div class="dashboard-container">
     <Information></Information>
