--- a/EP_Quest/Components/Quest/Internal/Progress.razor
+++ b/EP_Quest/Components/Quest/Internal/Progress.razor
@@ -1,4 +1,4 @@
-﻿<div class="info-container">
+﻿<div class="progress-container">
     <span>Progress</span>
     <span>Time until the end of step</span>
     <span>Help</span>
