--- a/EP_Quest/Views/Shared/_Layout.cshtml
+++ b/EP_Quest/Views/Shared/_Layout.cshtml
@@ -7,12 +7,9 @@
     <title>@((string)ViewBag.Title)</title>
     <link rel="icon" type="image/png" href="~/favicon.png">
     <base href="~/" />
-    <link href="css/reset.min.css" rel="stylesheet">
-    <link href="css/main.min.css" rel="stylesheet">
+    <link href="styles/reset.min.css" rel="stylesheet">
+    <link href="styles/main.min.css" rel="stylesheet">
     <link href="EP_Quest.styles.css" rel="stylesheet" />
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="js/Render.js"></script>
 </head>
 <body>
     <main>
