--- a/EP_Quest/Components/Quest/Internal/Information.razor
+++ b/EP_Quest/Components/Quest/Internal/Information.razor
@@ -1,4 +1,5 @@
 ﻿@using EP_Quest.Components.Quest.Internal
+@using EP_Quest.Models
 
 <div class="@_side">
     <div class="instruction-side" style="visibility: @_instructionsVisibility">
