--- a/EP_Quest/Components/Quest/Index.razor.css
+++ b/EP_Quest/Components/Quest/Index.razor.css
@@ -1,15 +1,20 @@
 ﻿.character-container {
+  width: auto;
+  height: auto;
   background: rgba(1, 15, 61, 0.2);
   border: 2px solid #00add4;
   border-radius: 10px;
-  flex-grow: 1;
+  padding: 1rem 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .dashboard-container {
   position: relative;
+  width: 100%;
+  height: 100%;
   background: rgba(1, 15, 61, 0.2);
   border: 2px solid #00add4;
   overflow: hidden;
   border-radius: 10px;
-  flex-grow: 5;
 }
