--- a/EP_Quest/Components/Quest/Internal/Dashboard.razor
+++ b/EP_Quest/Components/Quest/Internal/Dashboard.razor
@@ -1,17 +1,23 @@
 ﻿@using EP_Quest.Models
+@using EP_Quest.Services.Common
 @using Microsoft.EntityFrameworkCore
 @inject IQuestRepository Repository
+@inject NotificationService NService
 
 <div class="cards">
-    @foreach (var step in _steps)
+    @if (IsInitialized)
     {
-        <div class="card @step.LockIdentifier @step.Selection"
-             @onmouseover="() => HoverCard(true, step)"
-             @onmouseout="() => HoverCard(false)"
-             @onclick="() => SelectCard(step.GetNumber())">
-            @step.GetName()
-        </div>
+        @foreach (var step in _steps)
+        {
+            <div class="card @step.LockIdentifier @step.Selection"
+                 @onmouseover="() => HoverCard(true, step)"
+                 @onmouseout="() => HoverCard(false)"
+                 @onclick="() => SelectCard(step.GetNumber())">
+                @step.GetName()
+            </div>
+        }
     }
+
 </div>
 <div class="description-section">
     <span class="description-text">
@@ -19,11 +25,13 @@
     </span>
     <div class="buttons-container">
         <div class="nav-button" @onclick="ToInstructions">Instructions</div>
-        <div class="nav-button" style="visibility: @_playButtonVisibility" @onclick="ToSelectedStep">Play</div>
+        <div class="nav-button" style="visibility: @_playButtonVisibility" @onclick="PlayStep">Play</div>
     </div>
 </div>
 
 @code {
+    private bool IsInitialized = false;
+
     struct Step
     {
         public string LockIdentifier;
@@ -48,6 +56,7 @@
         public string GetName() => _step.Name;
         public int GetNumber() => _step.Number;
         public string GetDescription() => _step.Description;
+        public string GetContent() => _step.Content;
     }
 
     [Parameter]
@@ -61,16 +70,27 @@
     private string _playButtonVisibility = "hidden";
 
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        Init();
+        await Init();
+        NService.SubscribeNotification(SomeHandler);
+        IsInitialized = true;
     }
-    public void Init()
+    public async Task SomeHandler(NotificationName notificationName)
+    {
+        Repository.UpdateContext();
+
+        if (notificationName == NotificationName.UnlockNextStep)
+            await Init();
+
+        await InvokeAsync(StateHasChanged);
+    }
+    public async Task Init()
     {
         _stepDescription = string.Empty;
         _selectedStep = default;
         _playButtonVisibility = "hidden";
-        _steps = Repository.Steps.Select(x => new Step(x)).ToList();
+        _steps = await Repository.Steps.OrderBy(x => x.Number).Select(x => new Step(x)).ToListAsync();
     }
     private void HoverCard(bool isOver, Step step = default)
     {
@@ -102,7 +122,6 @@
 
             if (_steps[i].GetNumber() == stepNumber)
             {
-
                 _steps[i] = new Step(_steps[i].Get(), "selected-step");
                 _selectedStep = _steps[i];
                 _playButtonVisibility = _selectedStep.IsLocked() ? "hidden" : "visible";
@@ -115,5 +134,24 @@
             _playButtonVisibility = "hidden";
             _selectedStep = default;
         }
+    }
+    private async Task PlayStep()
+    {
+        var currentStep = Repository.Steps.Where(x => x.Number == _selectedStep.GetNumber());
+
+        if (currentStep.FirstOrDefault() == null)
+            throw new Exception();
+
+        await ToSelectedStep.InvokeAsync();
+
+        if (currentStep.FirstOrDefault().Start != null)
+            return;
+
+        await currentStep.ForEachAsync(x =>
+        {
+            x.Start = DateTime.Now.ToUniversalTime();
+        });
+        await Repository.SaveChangesAsync();
+        NService.ReleaseNotification(NotificationName.StepTimeReset);
     }
 }
