--- a/EP_Quest/Components/Quest/Internal/Progress.razor.css
+++ b/EP_Quest/Components/Quest/Internal/Progress.razor.css
@@ -1,10 +1,64 @@
 ﻿.progress-container {
   height: 100%;
-  margin: 1.5rem 0.5rem;
-  padding: 0 1rem;
-  max-height: 75%;
-  overflow: auto;
   display: flex;
-  gap: 2rem;
   flex-direction: column;
+}
+.progress-container .progress-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 4rem;
+}
+.progress-container .progress-section .battery {
+  height: 2rem;
+  padding: 0.25rem;
+  border: white 2px solid;
+  border-radius: 5px;
+  display: flex;
+  gap: 0.25rem;
+  position: relative;
+}
+.progress-container .progress-section .battery .divider {
+  width: 1rem;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.progress-container .progress-section .battery .active-divider {
+  background-color: white;
+}
+.progress-container .progress-section .battery:before {
+  content: "";
+  width: 8px;
+  height: 16px;
+  background-color: white;
+  position: absolute;
+  right: -8px;
+  top: calc(50% - 8px);
+}
+.progress-container .time-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 4rem;
+}
+
+.help-section {
+  display: flex;
+  justify-content: space-between;
+}
+.help-section .battery {
+  position: relative;
+  width: 120px;
+  height: 120px;
+}
+.help-section .battery:before {
+  z-index: 8;
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  top: 0;
+  left: 0;
+  background-image: url("images/unlock.svg");
+  background-size: 120px 120px;
 }
