--- a/EP_Quest/Components/Quest/Internal/Quest.razor
+++ b/EP_Quest/Components/Quest/Internal/Quest.razor
@@ -1,17 +1,56 @@
-﻿<div class="quest-container">
-    <span>
-        What is Lorem Ipsum?
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+﻿@using EP_Quest.Models
+@using EP_Quest.Services.Common
+@using Microsoft.EntityFrameworkCore
+@inject IQuestRepository Repository
+@inject NotificationService NService
 
-        Why do we use it?
-        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-    </span>
+<div class="quest-container">
+    @if (IsInitialized)
+    {
+        @_currentStep.Content
+    }
 </div>
 <div class="buttons-container">
     <button class="nav-button" @onclick="FromQuestToDashboard">To dashboard</button>
+    <button class="nav-button" @onclick="Done">Done</button>
 </div>
 
 @code {
     [Parameter]
     public EventCallback FromQuestToDashboard { get; set; }
+    private Step _currentStep { get; set; }
+    private bool IsInitialized = false;
+
+    protected override async Task OnInitializedAsync()
+    {
+        await Init();
+    }
+    public async Task Init()
+    {
+        _currentStep = await Repository.Steps.FirstOrDefaultAsync(x => x.IsCurrent);
+        IsInitialized = true;
+    }
+    private async Task Done()
+    {
+        var steps = Repository.Steps;
+        var stepNumber = steps.FirstOrDefault(x => x.IsCurrent)?.Number + 1;
+
+        if (stepNumber == null)
+            throw new Exception();
+
+        await steps.Where(x => x.IsCurrent || x.Number == stepNumber).ForEachAsync(x =>
+        {
+            x.IsCurrent = !x.IsCurrent;
+            x.IsLocked = false;
+        });
+        await steps.Where(x => x.Number == stepNumber - 1).ForEachAsync(x =>
+        {
+            x.IsDone = true;
+            x.Start = null;
+        });
+        await Repository.SaveChangesAsync();
+        NService.ReleaseNotification(NotificationName.StepTimeReset);
+        NService.ReleaseNotification(NotificationName.UnlockNextStep);
+        await FromQuestToDashboard.InvokeAsync();
+    }
 }
