--- a/EP_Quest/Components/Quest/Internal/Dashboard.razor.css
+++ b/EP_Quest/Components/Quest/Internal/Dashboard.razor.css
@@ -1,29 +1,29 @@
-﻿.cards {
+﻿.steps-container {
   margin: 1.5rem 0.5rem;
   padding: 0 1rem;
   overflow: auto;
   display: grid;
   gap: 1rem;
 }
-.cards .card {
+.steps-container .step {
   background: rgba(1, 15, 61, 0.2);
   color: white;
   height: 8rem;
   position: relative;
   border-radius: 5px;
 }
-.cards .card:hover {
+.steps-container .step:hover {
   box-sizing: border-box;
   border: 4px solid #00add4;
   cursor: pointer;
 }
 @media (min-width: 600px) {
-  .cards {
+  .steps-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (min-width: 900px) {
-  .cards {
+  .steps-container {
     grid-template-columns: repeat(3, 1fr);
   }
 }
@@ -51,6 +51,19 @@
   width: 120px;
   height: 120px;
   background-image: url("images/unlock.svg");
+  background-size: 120px 120px;
+}
+
+.done:before {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 120px;
+  height: 120px;
+  background-image: url("images/done.svg");
   background-size: 120px 120px;
 }
 
