--- a/EP_Quest/Components/Quest/Internal/Progress.razor.css
+++ b/EP_Quest/Components/Quest/Internal/Progress.razor.css
@@ -43,15 +43,17 @@
 }
 
 .help-section {
+  margin: 0 1rem;
   display: flex;
   justify-content: space-between;
+  gap: 3rem;
 }
-.help-section .battery {
+.help-section .clock {
   position: relative;
   width: 120px;
   height: 120px;
 }
-.help-section .battery:before {
+.help-section .clock:before {
   z-index: 8;
   content: "";
   position: absolute;
@@ -59,6 +61,22 @@
   height: 120px;
   top: 0;
   left: 0;
-  background-image: url("images/unlock.svg");
+  background-image: url("images/clock.svg");
   background-size: 120px 120px;
+}
+.help-section .phone {
+  position: relative;
+  width: 120px;
+  height: 120px;
+}
+.help-section .phone:before {
+  z-index: 8;
+  content: "";
+  position: absolute;
+  width: 108px;
+  height: 108px;
+  top: 5px;
+  left: 0;
+  background-image: url("images/phone.svg");
+  background-size: 108px 108px;
 }
