--- a/EP_Quest/Components/Quest/Internal/Progress.razor.scss
+++ b/EP_Quest/Components/Quest/Internal/Progress.razor.scss
@@ -49,10 +49,12 @@
 }
 
 .help-section {
+    margin: 0 1rem;
     display: flex;
     justify-content: space-between;
+    gap: 3rem;
 
-    .battery {
+    .clock {
         position: relative;
         width: 120px;
         height: 120px;
@@ -65,8 +67,26 @@
             height: 120px;
             top: 0;
             left: 0;
-            background-image: url('images/unlock.svg');
+            background-image: url('images/clock.svg');
             background-size: 120px 120px;
+        }
+    }
+
+    .phone {
+        position: relative;
+        width: 120px;
+        height: 120px;
+
+        &:before {
+            z-index: 8;
+            content: "";
+            position: absolute;
+            width: 108px;
+            height: 108px;
+            top: 5px;
+            left: 0;
+            background-image: url('images/phone.svg');
+            background-size: 108px 108px;
         }
     }
 }
