--- a/EP_Quest/Components/Quest/Internal/Progress.razor.scss
+++ b/EP_Quest/Components/Quest/Internal/Progress.razor.scss
@@ -1,5 +1,7 @@
 ﻿.progress-container {
+    width: auto;
     height: 100%;
+    margin: 0 .5rem;
     display: flex;
     flex-direction: column;
 
@@ -49,7 +51,8 @@
 }
 
 .help-section {
-    margin: 0 1rem;
+    width: auto;
+    margin: 0 .5rem;
     display: flex;
     justify-content: space-between;
     gap: 3rem;
@@ -58,6 +61,12 @@
         position: relative;
         width: 120px;
         height: 120px;
+
+        &:hover {
+            box-sizing: border-box;
+            filter: brightness(0) saturate(100%) invert(71%) sepia(77%) saturate(4504%) hue-rotate(152deg) brightness(90%) contrast(104%);
+            cursor: pointer;
+        }
 
         &:before {
             z-index: 8;
@@ -74,8 +83,14 @@
 
     .phone {
         position: relative;
-        width: 120px;
-        height: 120px;
+        width: 108px;
+        height: 108px;
+
+        &:hover {
+            box-sizing: border-box;
+            filter: brightness(0) saturate(100%) invert(71%) sepia(77%) saturate(4504%) hue-rotate(152deg) brightness(90%) contrast(104%);
+            cursor: pointer;
+        }
 
         &:before {
             z-index: 8;
