--- a/EP_Quest/Components/Quest/Index.razor
+++ b/EP_Quest/Components/Quest/Index.razor
@@ -3,8 +3,8 @@
 
 <Preloader IsLoading="IsLoading"></Preloader>
 
-<div class="character-container">
-    <Progress></Progress>
+<div class="status-container">
+    <Status></Status>
 </div>
 <div class="dashboard-container">
     <Information></Information>
