--- a/EP_Quest/Components/Quest/Index.razor.scss
+++ b/EP_Quest/Components/Quest/Index.razor.scss
@@ -1,10 +1,10 @@
-﻿.character-container {
-    width: auto;
+﻿.status-container {
+    width: 32rem;
     height: auto;
+    position: relative;
     background: rgba(1, 15, 61, 0.2);
     border: 2px solid #00add4;
     border-radius: 10px;
-    padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
 }
