--- a/EP_Quest/Components/Quest/Internal/Progress.razor.css
+++ b/EP_Quest/Components/Quest/Internal/Progress.razor.css
@@ -5,14 +5,16 @@
   flex-direction: column;
   justify-content: space-between;
 }
-.progress-container .progress-section {
+.progress-container .info-container {
+  padding: 1rem;
+}
+.progress-container .info-container .progress-section {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 4rem;
-  padding: 1rem;
 }
-.progress-container .progress-section .battery {
+.progress-container .info-container .progress-section .battery {
   height: 2rem;
   padding: 0.25rem;
   border: white 2px solid;
@@ -21,15 +23,15 @@
   gap: 0.25rem;
   position: relative;
 }
-.progress-container .progress-section .battery .divider {
+.progress-container .info-container .progress-section .battery .divider {
   width: 1rem;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.1);
 }
-.progress-container .progress-section .battery .active-divider {
+.progress-container .info-container .progress-section .battery .active-divider {
   background-color: white;
 }
-.progress-container .progress-section .battery:before {
+.progress-container .info-container .progress-section .battery:before {
   content: "";
   width: 8px;
   height: 16px;
@@ -38,7 +40,7 @@
   right: -8px;
   top: calc(50% - 8px);
 }
-.progress-container .time-section {
+.progress-container .info-container .time-section {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -56,8 +58,12 @@
   position: relative;
   width: 120px;
   height: 120px;
+  filter: brightness(0) saturate(100%) invert(54%) sepia(16%) saturate(4%) hue-rotate(349deg) brightness(92%) contrast(88%);
 }
-.progress-container .help-section .clock:hover {
+.progress-container .help-section .clock.active {
+  filter: brightness(0) saturate(100%) invert(99%) sepia(27%) saturate(442%) hue-rotate(286deg) brightness(119%) contrast(100%);
+}
+.progress-container .help-section .clock.active:hover {
   box-sizing: border-box;
   filter: brightness(0) saturate(100%) invert(60%) sepia(100%) saturate(329%) hue-rotate(145deg) brightness(83%) contrast(92%);
   cursor: pointer;
