--- a/EP_Quest/Components/Quest/Internal/Progress.razor.scss
+++ b/EP_Quest/Components/Quest/Internal/Progress.razor.scss
@@ -5,50 +5,54 @@
     flex-direction: column;
     justify-content: space-between;
 
-    .progress-section {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 4rem;
+    .info-container {
         padding: 1rem;
 
-        .battery {
-            height: 2rem;
-            padding: .25rem;
-            border: white 2px solid;
-            border-radius: 5px;
+        .progress-section {
             display: flex;
-            gap: .25rem;
-            position: relative;
+            justify-content: space-between;
+            align-items: center;
+            height: 4rem;
 
-            .divider {
-                width: 1rem;
-                height: 100%;
-                background-color: rgba(255, 255, 255, 0.1);
-            }
+            .battery {
+                height: 2rem;
+                padding: .25rem;
+                border: white 2px solid;
+                border-radius: 5px;
+                display: flex;
+                gap: .25rem;
+                position: relative;
 
-            .active-divider {
-                background-color: white;
-            }
+                .divider {
+                    width: 1rem;
+                    height: 100%;
+                    background-color: rgba(255, 255, 255, 0.1);
+                }
 
-            &:before {
-                content: "";
-                width: 8px;
-                height: 16px;
-                background-color: white;
-                position: absolute;
-                right: -8px;
-                top: calc(50% - 8px);
+                .active-divider {
+                    background-color: white;
+                }
+
+                &:before {
+                    content: "";
+                    width: 8px;
+                    height: 16px;
+                    background-color: white;
+                    position: absolute;
+                    right: -8px;
+                    top: calc(50% - 8px);
+                }
             }
+        }
+
+        .time-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 4rem;
         }
     }
 
-    .time-section {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 4rem;
-    }
 
     .help-section {
         width: auto;
@@ -62,11 +66,16 @@
             position: relative;
             width: 120px;
             height: 120px;
+            filter: brightness(0) saturate(100%) invert(54%) sepia(16%) saturate(4%) hue-rotate(349deg) brightness(92%) contrast(88%);
 
-            &:hover {
-                box-sizing: border-box;
-                filter: brightness(0) saturate(100%) invert(60%) sepia(100%) saturate(329%) hue-rotate(145deg) brightness(83%) contrast(92%);
-                cursor: pointer;
+            &.active {
+                filter: brightness(0) saturate(100%) invert(99%) sepia(27%) saturate(442%) hue-rotate(286deg) brightness(119%) contrast(100%);
+
+                &:hover {
+                    box-sizing: border-box;
+                    filter: brightness(0) saturate(100%) invert(60%) sepia(100%) saturate(329%) hue-rotate(145deg) brightness(83%) contrast(92%);
+                    cursor: pointer;
+                }
             }
 
             &:before {
