--- a/EP_Quest/Components/Quest/Internal/Information.razor
+++ b/EP_Quest/Components/Quest/Internal/Information.razor
@@ -9,7 +9,7 @@
         <Dashboard @ref="_dashboardComponent" ToInstructions="ToInstructions" ToSelectedStep="ToSelectedStep"></Dashboard>
     </div>
     <div class="quest-side" style="visibility: @_questVisibility">
-        <Quest FromQuestToDashboard="FromQuestToDashboard"></Quest>
+        <Step FromQuestToDashboard="FromQuestToDashboard"></Step>
     </div>
 </div>
 
