--- a/EP_Quest/Components/Quest/Internal/Progress.razor
+++ b/EP_Quest/Components/Quest/Internal/Progress.razor
@@ -48,8 +48,8 @@
 </div>
 
 @code {
-    private List<Step> _steps;
-    private Step _currentStep;
+    private List<Models.Step> _steps;
+    private Models.Step _currentStep;
     private string? _timeUntilEnd;
     private string? _isTimeAddingActive;
     private Timer? _checkingTimer;
