--- a/EP_Quest/Components/Quest/Internal/Dashboard.razor.css
+++ b/EP_Quest/Components/Quest/Internal/Dashboard.razor.css
@@ -1,31 +1,41 @@
 ﻿.steps-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.steps-container .steps-wrapper {
   margin: 1.5rem 0.5rem;
   padding: 0 1rem;
   overflow: auto;
   display: grid;
   gap: 1rem;
 }
-.steps-container .step {
+.steps-container .steps-wrapper .step {
   background: rgba(1, 15, 61, 0.2);
   color: white;
   height: 8rem;
   position: relative;
   border-radius: 5px;
 }
-.steps-container .step:hover {
+.steps-container .steps-wrapper .step:hover {
   box-sizing: border-box;
   border: 4px solid #00add4;
   cursor: pointer;
 }
 @media (min-width: 600px) {
-  .steps-container {
+  .steps-container .steps-wrapper {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (min-width: 900px) {
-  .steps-container {
+  .steps-container .steps-wrapper {
     grid-template-columns: repeat(3, 1fr);
   }
+}
+.steps-container .result-phrase {
+  text-align: center;
 }
 
 .lock:before {
