--- a/EP_Quest/Components/Quest/Internal/Dashboard.razor.scss
+++ b/EP_Quest/Components/Quest/Internal/Dashboard.razor.scss
@@ -1,30 +1,42 @@
 ﻿.steps-container {
-    margin: 1.5rem 0.5rem;
-    padding: 0 1rem;
-    overflow: auto;
-    display: grid;
-    gap: 1rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-    .step {
-        background: rgba(1, 15, 61, 0.2);
-        color: white;
-        height: 8rem;
-        position: relative;
-        border-radius: 5px;
+    .steps-wrapper {
+        margin: 1.5rem 0.5rem;
+        padding: 0 1rem;
+        overflow: auto;
+        display: grid;
+        gap: 1rem;
 
-        &:hover {
-            box-sizing: border-box;
-            border: 4px solid #00add4;
-            cursor: pointer;
+        .step {
+            background: rgba(1, 15, 61, 0.2);
+            color: white;
+            height: 8rem;
+            position: relative;
+            border-radius: 5px;
+
+            &:hover {
+                box-sizing: border-box;
+                border: 4px solid #00add4;
+                cursor: pointer;
+            }
+        }
+
+        @media (min-width: 600px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (min-width: 900px) {
+            grid-template-columns: repeat(3, 1fr);
         }
     }
 
-    @media (min-width: 600px) {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    @media (min-width: 900px) {
-        grid-template-columns: repeat(3, 1fr);
+    .result-phrase {
+        text-align: center;
     }
 }
 
