--- a/EP_Quest/Views/Shared/_Layout.cshtml
+++ b/EP_Quest/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="styles/reset.min.css" rel="stylesheet">
     <link href="styles/main.min.css" rel="stylesheet">
     <link href="EP_Quest.styles.css" rel="stylesheet" />
+    <script src="scripts/ScrollContent.js"></script>
 </head>
 <body>
     <main>
